Added background image and bio

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
    	<h1>Jacky</h1>
    </div>
    <div class="container">
-        <p>container</p>
+        <font size="10">Hello! Welcome to my Website!</font>
         <div class="row">
-          <p>row</p>
+          <p>Hi, my name is Jacqueline Hovsepian. I am a sophomore at Pasadena High School. I am 14 years old. My passions are listening to music, going on my phone, and swimming. (There is alot more but these are just the main ones.) My favorite foods are hot wings and pizza, oh and french fries. I enjoy coding. It's kinda confusing and hard but, at the same time it is fun. Anyways, I hope you like my website!</p>
           <div class="col-xs-10">
             <p>col-xs-10</p>
             <div class="row">
