--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body> 
    <div class="about-me">
-   	<h1>Jacky</h1>
+   	<h1>Jacky's Website</h1>
    </div>
    <div class="container">
         <font size="10">Hello! Welcome to my Website!</font>
