--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body> 
    <div class="about-me">
-   	<h1>Jacky's Website</h1>
+   	<h1>Jacky's Website.</h1>
    </div>
    <div class="container">
         <font size="10">Hello! Welcome to my Website!</font>
@@ -65,5 +65,8 @@
           </div>
         </div>
    </div>
+   <div class="footer">
+  <p>Jacky's Website.</p>
+  </div>
 </body>
 </html> 
