--- a/index.html
+++ b/index.html
@@ -77,5 +77,7 @@
    <div class="footer">
   <p>Jacky's Website.</p>
   </div>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html> 
