added images to my carousel.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-<meta name="apple-mobile-web-app-capable" content="yes"/>
-<link rel="apple-touch-icon-precomposed" href="Images/Icon.png"/>
-<link href="Images/Default.jpg" media="(device-width: 320px)" rel="apple-touch-startup-image">
-<link href="Images/Default@2x.png" rel="apple-touch-startup-image" sizes="640x920">
-<link href="Images/Default-568h@2x.png" rel="apple-touch-startup-image" sizes="640x1096">
-<link href="Images/DefaultIpadPortrait.jpg" media="(device-width: 768px) and (orientation: portrait)" rel="apple-touch-startup-image">
-<link href="Images/DefaultIpadLandscape.jpg" media="(device-width: 768px) and (orientation: landscape)" rel="apple-touch-startup-image">
-<link href="Images/DefaultIpadLandscape@2x.jpg" media="(device-width: 768px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link type="text/css" rel="stylesheet" href="css/custom-style.css">
@@ -20,7 +11,7 @@
    	<h1>Jacky's Website.</h1>
    </div>
    <div class="container">
-        <font size="10">Hello! Welcome to my Website!</font>
+           <font size="10">Hello! Welcome to my Website!</font>
         <div class="row">
           <p>Hi, my name is Jacqueline Hovsepian. I am a sophomore at Pasadena High School. My birthday is on October 18th. I am 14 years old.
           My passions are listening to music, going on my phone, doing makeup and swimming. (There is alot more but these are just the main ones.) My favorite foods are Pizza, French fries, Starbucks, and In n' out.</p>
@@ -77,7 +68,7 @@
    <div class="footer">
   <p>Jacky's Website.</p>
   </div>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html> 
