--- a/projects.html
+++ b/projects.html
@@ -30,19 +30,12 @@
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
-    <div class="item active">
-      <img src="..." alt="...">
-      <div class="carousel-caption">
-        ...
-      </div>
+    <div class="item active no-borders">
+      <img src="css/breakout.png" alt="breakout">
     </div>
-    <div class="item">
-      <img src="..." alt="...">
-      <div class="carousel-caption">
-        ...
-      </div>
+    <div class="item no-borders">
+      <img src="css/platformer.png" alt="platformer">
     </div>
-    ...
   </div>
 
   <!-- Controls -->
