--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link type="text/css" rel="stylesheet" href="css/custom-style.css">
+  <meta name="viewport" content="width=480px, initial-scale=1.0">
   <title></title>
 </head>
 <body>
