added a model for my about me

--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
         <div class="row">
           <p>Hi, my name is Jacqueline Hovsepian. I am a sophomore at Pasadena High School. My birthday is on October 18th. I am 14 years old.
           My passions are listening to music, going on my phone, doing makeup and swimming. (There is alot more but these are just the main ones.) My favorite foods are Pizza, French fries, Starbucks, and In n' out.</p>
+          <!-- Button trigger modal -->
+<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  Click Here
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">About Me</h4>
+      </div>
+      <div class="modal-body">
+        Hi, my name is Jacqueline Hovsepian. I am a sophomore at Pasadena High School. My birthday is on October 18th. I am 14 years old.
+          My passions are listening to music, going on my phone, doing makeup and swimming. (There is alot more but these are just the main ones.) My favorite foods are Pizza, French fries, Starbucks, and In n' out.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
           <div class="col-xs-10">
             <p>I enjoy coding. It's kinda confusing and hard but, at the same time it is fun. Anyways, I hope you like my website!</p>
             <div class="row">
