changed modal font color

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">About Me</h4>
+        <h4 class="modal-title modal-body" id="myModalLabel">About Me</h4>
       </div>
       <div class="modal-body">
         Hi, my name is Jacqueline Hovsepian. I am a sophomore at Pasadena High School. My birthday is on October 18th. I am 14 years old.
