deleted custom style css, fixed width for carousel, added code to main css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link type="text/css" rel="stylesheet" href="css/custom-style.css">
+  <!-- <link type="text/css" rel="stylesheet" href="css/custom-style.css"> -->
   <meta name="viewport" content="width=480px, initial-scale=1.0">
   <title></title>
 </head>
@@ -78,7 +78,7 @@
               </div>
             </div>   
           </div>
-          <div class="col-xs-2">
+          <div class="col-xs-2" tab-section>
             <nav class="list-group">
               <a class="list-group-item" href="index.html">About Me</a>
               <a class="list-group-item" href="projects.html">Projects</a>
