--- a/projects.html
+++ b/projects.html
@@ -3,10 +3,12 @@
 <head>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link type="text/css" rel="stylesheet" href="css/custom-style.css">
+  <!-- <link type="text/css" rel="stylesheet" href="css/custom-style.css"> -->
+  <meta name="viewport" content="width=480px, initial-scale=1.0">
   <title></title>
 </head>
 <body>
+<div class="container-fluid">
    <div class="about-me">
    	<h1>Projects.</h1>
    </div>
@@ -38,9 +40,15 @@
   </a>
 </div>
 
-   <div class="footer">
-  <p>Projects.</p>
+<div class="no-borders" class="row">
+  <div class="col-xs-12 no-borders">
+    <div class="footer">
+      <p>Projects.</p>
+    </div>
   </div>
+</div>
+
+</div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
